<resources>
    <string name="app_name">rentallcar</string>
    <string name="txt_login">Login</string>
    <string name="txt_password">Introduza a Password</string>
    <string name="txt_email">Introduza o email</string>
    <string name="txt_registar">Registar</string>
    <string name="txt_recolha">Recolha</string>
    <string name="txt_localizacao">Localização</string>
    <string name="txt_data_de_recolha">Data de recolha</string>
    <string name="txt_pesquisar">Pesquisar</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_email_invalido">Email inválido</string>
    <string name="txt_password_invalida">Passowrd invalida</string>
    <string name="txt_marca">Marca:</string>
    <string name="txt_modelo">Modelo:</string>
    <string name="txt_combustivel">Combustível:</string>
    <string name="txt_preco">Preço:</string>
    <string name="txt_sobre">A RentAllCar é uma empresa reconhecida a nivel nacional criada por 3 jovens que procuram soluções modernas para as necessidades atuais.</string>
    <string name="txt_equipa">Com sede em Leiria, a equipa é composta por 3 talentos da criatividade com vários conhecimentos de negócio e com uma cratividade incrivel.</string>


    <string name="txt_dinamico">Ver Detalhes Livro (Dinâmico)</string>
    <string name="txt_menu_email">Enviar Email</string>
    <string name="txt_boas_vindas">Bem-vindo!</string>
    <string name="txt_pass_invalida">Password ivalida</string>
    <string name="act_estatico">Dados estáticos</string>
    <string name="act_dinamico">Dados Dimanico</string>
    <string name="menu_estatico">Livro Lista</string>
    <string name="menu_dinamico">Livro Grelha</string>
    <string name="menu_comunicar">Comunicar</string>
    <string name="menu_email">Email</string>
    <string name="act_livro">Detalhes: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="menu_pesquisar">Pesquisa</string>
    <string name="menu_remover">Remover</string>
    <string name="act_detalhes">Adicionar Livro</string>
    <string name="txt_categoria">Categoria</string>
    <string name="txt_matricula">Matricula:</string>
    <string name="txt_extras">Extras:</string>
    <string name="preference_file_key">teste</string>

</resources>