<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context=".vistas.Pesquisar">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvRecolha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_recolha" />

    <EditText
        android:id="@+id/etLocalizacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/txt_localizacao" />

    <TextView
        android:id="@+id/tvData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_data_de_recolha" />

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnPesquisar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickPesquisar"
        android:text="@string/txt_pesquisar" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>