<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical"
    tools:context=".vistas.DetalhesReservaActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgCapa"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_weight="0.5"
                android:src="@drawable/programarandroid2" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="7dp"
                    android:text="@string/txt_marca"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/etMarca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_marca"

                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="7dp"
                    android:text="@string/txt_modelo"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/etModelo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_modelo"
                    android:textSize="20dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="7dp"
                    android:text="Matricula:"
                    android:textSize="20dp"

                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvMatricula"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_matricula"
                    android:textSize="20dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="7dp"
                    android:text="Seguro:"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/etSeguro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Seguro"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="7dp"
                    android:text="Local Levantamento:"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvLocalL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="LocalLevantamento"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="7dp"
                    android:text="Data Levantamento:"
                    android:textSize="20dp"

                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvDataL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Data Levantamento"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="7dp"
                    android:text="Local Devolução:"
                    android:textSize="20dp"

                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvLocalD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Local Devolucao"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="7dp"
                    android:text="Data Devolução:"
                    android:textSize="20dp"

                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvDataD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Data Devolução"
                    android:textSize="20dp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="7dp"
                    android:text="Preço total:"
                    android:textSize="20dp"

                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvPreco"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="preco"
                    android:textSize="20dp" />
            </LinearLayout>



            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3" />

            <Button
                android:id="@+id/btnPedirAssistencia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Pedir assistência"
                android:visibility="invisible" />

        </LinearLayout>
    </ScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>